<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfilePage">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:focusable="true"
        android:text="Edit Profile"
        android:textColorHint="@color/light_orange"
        android:textSize="35dp" />




    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:focusable="true" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEmail"
        android:layout_alignEnd="@+id/editEmail"
        android:layout_alignParentStart="true"
        android:hint = 'Edit Email'/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/oldPassword"
        android:layout_below="@+id/editName"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editEmail"
        android:hint="Old Password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword"
        android:layout_below="@+id/oldPassword"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editEmail"
        android:hint="New Password"
        android:autofillHints="" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editConfirmPassword"
        android:layout_below="@+id/editPassword"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editEmail"
        android:hint="Confirm New Password"
        android:autofillHints="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="choose profile picture"
        android:id="@+id/editPicture"
        android:onClick="uploadPicture"
        android:layout_below="@+id/editConfirmPassword" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editSelectedPicture"
        android:layout_below="@+id/editPicture" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="10dp"
        android:id="@+id/editError"
        android:layout_below="@+id/editSelectedPicture"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editEmail" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="confirm"
        android:id="@+id/editProfileButton"
        android:onClick="editProfile"
        android:layout_below="@+id/editError" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="cancel"
        android:id="@+id/editProfileCancel"
        android:onClick="cancel"
        android:layout_below="@+id/editProfileButton" />

</RelativeLayout>